Task 1 Code review

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+//TODO: Please consider using SCSS features such as variables, nesting, mixins etc.
+
 #root {
   height: 100%;
   min-height: 850px;  
