--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,10 +28,6 @@
   .popup-content {
     width: auto;
     max-width: 95%;
-    -moz-transition: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
-    -ms-transition: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
-    -o-transition: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
-    transition: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;        
     -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
     animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 
@@ -39,6 +35,13 @@
       max-width: 100%;
       height: 60vw;
     }
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    gap: 16px;
+    padding: 50px 0;
   }
   
 }
