--- a/src/components/Movies/movies.scss
+++ b/src/components/Movies/movies.scss
@@ -276,7 +276,7 @@
             button.close {
                 position: absolute;
                 top: 0;
-                right: 0px;
+                right: 0;
                 z-index: 999;
                 display: block;
                 width: 75px;
